Fix tests against ingest job status store